# neural_network_from_scratch

./: Perceptron.md  README.md  pyproject.toml
examples/: perceptron_and.py  perceptron_or.py  perceptron_xor.py
images/: bitwise_ops.excalidraw  perceptron_simple.excalidraw
nns/: __init__.py  perceptron.py
