[tool.poetry]
name = "neural_network_from_scratch"
version = "0.1.0"
description = "Neural network from scratch"
authors = ["robjsliwa <robjsliwa@gmail.com>"]
license = "MIT"
packages = [
    { include = "examples" },
    { include = "examples/**/*.py" },
    { include = "nns" },
    { include = "nns/**/*.py" },
]

[tool.poetry.scripts]
perceptron_and = "examples.perceptron_and:main"
perceptron_or = "examples.perceptron_or:main"
perceptron_xor = "examples.perceptron_xor:main"

[tool.poetry.dependencies]
python = "3.9"
numpy = "^1.21.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
